fix(core): preserve bean order in BeanContainer for safe shutdown
- Replaced `Map.copyOf(singletons)` with `Collections.unmodifiableMap(new LinkedHashMap<>(singletons))`.
- `Map.copyOf` returns an `ImmutableCollections.MapN` which completely scrambles the insertion order.
- Because `BeanContainer.close()` relies on reversing the map's values to shut down beans in the correct dependency order (e.g. stopping the Web Server BEFORE closing the Database Connection Pool), the scrambled order caused random shutdown sequences.
- This fixes a critical foundational bug that would have caused active HTTP requests to fail during graceful shutdown due to prematurely closed underlying resources.